# arxiv-assistant

./: .gitignore  README.md  ccmemory.md  pyproject.toml  sync_latest_papers.py
.claude/: settings.local.json
agent/: MANUAL.md  __init__.py  agent.py  brain.py  cli.py  prompts.py  schemas.py  test_agent.py
agent/tools/: __init__.py  search_tools.py
agent/utils/: __init__.py  formatters.py  search_backend.py
analysis/: ANALYSIS.md  cleaned_papers_incremental.parquet.fc7b254acfa44629967d1c1e22ecc388.tmp  data_process.py  embedder.py  patch_metadata.py  process.py  query.py  tmp_merge.py  topic_cluster_analysis.py
analysis/authors/: author.py  top_authors.csv
analysis/cleaned_papers.parquet - 副本/: .part-00000-3630e14d-d139-43de-a53c-696e9fdbcaad-c000.snappy.parquet.crc  .part-00001-3630e14d-d139-43de-a53c-696e9fdbcaad-c000.snappy.parquet.crc  .part-00002-3630e14d-d139-43de-a53c-696e9fdbcaad-c000.snappy.parquet.crc  .part-00003-3630e14d-d139-43de-a53c-696e9fdbcaad-c000.snappy.parquet.crc  .part-00004-3630e14d-d139-43de-a53c-696e9fdbcaad-c000.snappy.parquet.crc  (+5 more)
app/: app.py  auth.py  dashboard.py  search.py
crawler/: spider.py  test_db.py  updater.py
data/: app.db  embedder.py  updater.py  users.json
memory/: MEMORY.md  feedback_code_style.md  implementation_reality.md  project_overview.md  task_dynamic_analysis_injection.md  thesis_remote_writing_plan.md  thesis_requirements.md
retrieval/: __init__.py  filters.py  formatters.py  resources.py  schemas.py  service.py  test_retrieval.py
search/: __init__.py  searcher.py  test_search.py  utils.py
(+19 files in other folders)
