[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.5.10",
    "arxiv>=2.4.1",
    "chromadb>=1.5.2",
    "nltk>=3.9.3",
    "openai>=2.29.0",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "pyspark>=4.1.1",
    "sentence-transformers>=5.2.3",
    "torch==2.10.0+cu130",
    "torchvision==0.25.0+cu130",
    "tqdm>=4.67.3",
    "wordcloud>=1.9.6",
]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
